# idp-innovahouse

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md
db/: .env.example  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  schema.sql
db/migrations/: env.py
db/migrations/versions/: 001_initial_schema.py
db/scripts/: migrate.sh
db/seeds/: 001_sample_data.sql
deploy/n8n/: docker-compose.yml
deploy/n8n/n8niorunners/: n8n-task-runners.json
