[project]
name = "docflow-db"
version = "0.1.0"
description = "DocFlow AI - Database migrations and async utilities"
requires-python = ">=3.11"
dependencies = [
    # Database - Async Drivers
    "psycopg[binary,pool]>=3.1.18",
    "psycopg-pool>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",

    # Async Libraries
    "redis[asyncio]>=5.0.1",
    "aio-pika>=9.4.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",

    # FastAPI & ASGI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Utilities
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    # Testing (Async)
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "testcontainers>=3.7.1",

    # Code Quality
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
